jsのリファクタリング

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <small>(c) 2022 shibata</small>
   </footer>
 
-  <a  id="top" class="top" href="#">
+  <a  id="to_top" class="top" href="#">
     <img src="img/TOPボタン(白).png" alt="TOPへ戻る" class="top__img">
     <img src="img/TOPボタン(ホバー).png" alt="" class="top__img top__img-hover">
   </a>
