loading画面の追加

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- 基本フォント -->
-  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
   <!-- セクション名とフッター用フォント -->
   <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&text=ABOUTSKILWRCN(c)20shibat&display=swap" rel="stylesheet">
   <!-- 速読強要文庫 -->
@@ -34,6 +34,16 @@
 </script>
 </head>
 <body>
+
+  <div id="loading" class="loading">
+    <div>
+      <img src="img/loading(1).png" alt="" class="loading__img">
+      <img src="img/loading(2).png" alt="" class="loading__img">
+      <img src="img/loading(3).png" alt="" class="loading__img">
+      <img src="img/loading(4).png" alt="" class="loading__img">
+      <img src="img/loading(5).png" alt="" class="loading__img show">
+    </div>
+  </div>
   
   <div id="target"></div>
 
@@ -210,6 +220,7 @@
                 <li>使用写真の選定</li>
                 <li>画像の加工</li>
                 <li>文章の加筆修正</li>
+                <li>記載事項の提案</li>
                 <li>コーディング</li>
               </ul>
             </dd>
