--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   
   <div id="target"></div>
 
-  <div class="top-right"></div>
-  <div class="bottom-left"></div>
+  <div class="border__top-right" id="border_tr"></div>
+  <div class="border__bottom-left" id="border_bl"></div>
 
   <header>
     <a href="#">
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="hero__list">
-              <a href="#work">
+              <a href="#works">
                 <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
                 <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
                 <div>WORKS</div>
@@ -149,25 +149,25 @@
       <span id="skill" class="anchor"></span>
       SKILL
     </h1>
-    <ul>
-      <li class="sk">
-        <img src="img/html5-css3.png" alt="HTML">
+    <ul class="skill__lists">
+      <li class="skill__list">
+        <img src="img/html5-css3.png" alt="HTML" class="skill__list-img">
         <div>
           <h2>HTML/CSS</h2>
           <p>Webサイトを0から構築する為のHTML、CSSの使用が可能です。<br>
             現在使用しているエディタはVisual Studio Codeです。</p>
         </div>
       </li>
-      <li class="sk">
-        <img src="img/js@2x.png" alt="JavaScript">
+      <li class="skill__list">
+        <img src="img/js@2x.png" alt="JavaScript" class="skill__list-img">
         <div>
           <h2>JavaScript</h2>
           <p>Webサイトに動きを付けるコーディングが可能です。<br>
             現在もっとも勉強中の言語です。</p>
         </div>
       </li>
-      <li class="sk">
-        <img src="img/ps@2x.png" alt="Photoshop">
+      <li class="skill__list">
+        <img src="img/ps@2x.png" alt="Photoshop" class="skill__list-img">
         <div>
           <h2>Photoshop</h2>
           <p>
@@ -176,15 +176,15 @@
           </p>
         </div>
       </li>
-      <li class="sk">
-        <img src="img/responsive.png" alt="responsivedesign">
+      <li class="skill__list">
+        <img src="img/responsive.png" alt="responsivedesign" class="skill__list-img">
         <div>
           <h2>Responsive</h2>
           <p>様々なデバイスからアクセスした際に、最適な表示となるようにWebサイトを制作出来ます。</p>
         </div>
       </li>
-      <li class="sk">
-        <img src="img/photo-movie.png" alt="camera">
+      <li class="skill__list">
+        <img src="img/photo-movie.png" alt="camera" class="skill__list-img">
         <div>
           <h2>Photo/Movie</h2>
           <p>写真撮影を趣味としている為、簡単なレタッチが可能です。<br>
@@ -194,13 +194,13 @@
     </ul>
   </section>
 
-  <section class="work">
+  <section class="works">
     <h1>
-      <span id="work" class="anchor"></span>
+      <span id="works" class="anchor"></span>
       WORKS
     </h1>
     <ul>
-      <li class="work_list">
+      <li class="works__list">
         <a href="https://shibawanko0202.github.io/monte/">
           <img src="img/もんてくらい(スクショ)950.jpg" alt="" class="works__list-img">
         </a>
@@ -208,13 +208,13 @@
             住宅型有料老人ホーム<br>
             <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="monte-img">
           </h2>
-          <dl>
-            <dt>概要</dt>
-            <dd>知人が経営する老人ホームのwebサイトです。</dd>
-            <dt>工数</dt>
-            <dd>25日</dd>
-            <dt>担当範囲</dt>
-            <dd>
+          <dl class="works__dl">
+            <dt class="works__dt">概要</dt>
+            <dd class="works__dd">知人が経営する老人ホームのwebサイトです。</dd>
+            <dt class="works__dt">工数</dt>
+            <dd class="works__dd">25日</dd>
+            <dt class="works__dt">担当範囲</dt>
+            <dd class="works__dd">
               <ul>
                 <li>サイトデザイン</li>
                 <li>使用写真の選定</li>
@@ -224,119 +224,119 @@
                 <li>コーディング</li>
               </ul>
             </dd>
-            <dt>こだわりポイント</dt>
-            <dd>
+            <dt class="works__dt">こだわりポイント</dt>
+            <dd class="works__dd">
               サイトを閲覧する年齢層(老人ホームの利用者層とその家族)を考え、できるだけ分かりやすくスクロールだけで完結するデザインにしました。
             </dd>
-            <dt>苦労した点とその対策</dt>
-            <dd>
+            <dt class="works__dt">苦労した点とその対策</dt>
+            <dd class="works__dd">
               「使用する画像が決まっておらず、良い写真が撮れたら変更したい」という事だったので、現状持っている画像(200枚以上)を送ってもらいそこから使用する画像を選定し、レタッチ(露出の調整、歪曲収差の補正、不要なものの削除等)してから使用しています。
             </dd>
-            <dt>今後の課題</dt>
-            <dd>
+            <dt class="works__dt">今後の課題</dt>
+            <dd class="works__dd">
               いずれはブログやお知らせも追加したいとのことなので、CMSの導入。
             </dd>
           </dl>
       </li>
-      <li class="work_list">
+      <li class="works__list">
         <a href="https://shibawanko0202.github.io/sokudokubunko/">
           <img src="img/sokudokubunko.jpg" alt="" class="works__list-img">
         </a>
           <h2 class="sokudoku">速読強要文庫</h2>
-          <dl>
-            <dt>概要</dt>
-            <dd>
+          <dl class="works__dl">
+            <dt class="works__dt">概要</dt>
+            <dd class="works__dd">
               人間が文章を読む際にもっとも時間をかけている視線の移動を無くすことで、速読が出来るようにしたwebアプリです。
             </dd>
-            <dt>工数</dt>
-            <dd>10日</dd>
-            <dt>こだわりポイント</dt>
-            <dd>
+            <dt class="works__dt">工数</dt>
+            <dd class="works__dd">10日</dd>
+            <dt class="works__dt">こだわりポイント</dt>
+            <dd class="works__dd">
               文庫本(古本)のような見た目とアニメーション。<br>
               難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。
             </dd>
-            <dt>苦労した点とその対策</dt>
-            <dd>
+            <dt class="works__dt">苦労した点とその対策</dt>
+            <dd class="works__dd">
               青空文庫(著作権の消滅した文学作品を載せているwebサイト)から作品を選ぶのに悩みました。<br>
               本当は冒頭が有名な「雪国」も掲載したかったのですが、著者が比較的長寿だった為ギリギリ著作権が残っていました。
             </dd>
-            <dt>今後の課題</dt>
-            <dd>
+            <dt class="works__dt">今後の課題</dt>
+            <dd class="works__dd">
               現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用して自動変換出来るようにしたいと考えています。
             </dd>
           </dl>
       </li>
-      <li class="work_list">
+      <li class="works__list">
         <a href="https://shibawanko0202.github.io/speedTyping/">
           <img src="img/typing!(speed).jpg" alt="" class="works__list-img">
         </a>
         <div>
           <h2 class="typing">typing!</h2>
-          <dl>
-            <dt>概要</dt>
-            <dd>タイピングゲームです。<br>
+          <dl class="works__dl">
+            <dt class="works__dt">概要</dt>
+            <dd class="works__dd">タイピングゲームです。<br>
               html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。<br>
               また、苦手なキーが一目で分かるようjavascriptで動きを付けました。
             </dd>
-            <dt>工数</dt>
-            <dd>14日</dd>
-            <dt>こだわりポイント</dt>
-            <dd>
+            <dt class="works__dt">工数</dt>
+            <dd class="works__dd">14日</dd>
+            <dt class="works__dt">こだわりポイント</dt>
+            <dd class="works__dd">
               気持のいいUIを目指してアニメーションを実装しました。<br>
               ミスした際に現れるバルーンはクリックで割ることもできます。
             </dd>
-            <dt>苦労した点とその対策</dt>
-            <dd>
+            <dt class="works__dt">苦労した点とその対策</dt>
+            <dd class="works__dd">
               ミスしたキーのバルーンの出現がランダムな為、問題文に被って出現する事もありました。<br>
               その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに出現するようにしました。
             </dd>
-            <dt>今後の課題</dt>
-            <dd>問題(単語)の追加。日本語ver。</dd>
+            <dt class="works__dt">今後の課題</dt>
+            <dd class="works__dd">問題(単語)の追加。日本語ver。</dd>
           </dl>
         </div>
       </li>
-      <li class="work_list">
+      <li class="works__list">
         <a href="https://shibawanko0202.github.io/monkeybord/">
           <img src="img/monkeybord.jpg" alt="" class="works__list-img">
         </a>
           <h2 class="monkeybord">無限<span>の</span>猿定理実験場</h2>
-          <dl>
-            <dt>概要</dt>
-            <dd>
+          <dl class="works__dl">
+            <dt class="works__dt">概要</dt>
+            <dd class="works__dd">
               「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。<br>
               数文字の英単語でも滅茶苦茶時間がかかることが分かります。<br>
               「apple」は(幸運にも)6時間程度で完成しました。
             </dd>
-            <dt>工数</dt>
-            <dd>10日</dd>
-            <dt>こだわりポイント</dt>
-            <dd>
+            <dt class="works__dt">工数</dt>
+            <dd class="works__dd">10日</dd>
+            <dt class="works__dt">こだわりポイント</dt>
+            <dd class="works__dd">
               機能としてはシンプルなものなので、今回はメディアクエリを使わないでレスポンシブ対応してみました。
             </dd>
-            <dt>苦労した点とその対策</dt>
-            <dd>
+            <dt class="works__dt">苦労した点とその対策</dt>
+            <dd class="works__dd">
               打鍵した文字を保持し続けると2万字程度からsetIntervalの速度が落ちる為必要以上に時間がかかるので、現在は一定数を越えると文字を破棄して速度を維持しています。
             </dd>
-            <dt>今後の課題</dt>
-            <dd>日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留。</dd>
+            <dt class="works__dt">今後の課題</dt>
+            <dd class="works__dd">日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留。</dd>
           </dl>
       </li>
-      <li class="work_list">
+      <li class="works__list">
         <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
           <img src="img/yoshiokariho_copy.jpg" alt="" class="works__list-img">
         </a>
           <h2>吉岡里帆/コピーサイト</h2>
-          <dl>
-            <dt>概要</dt>
-            <dd>吉岡里帆さんのHPの模写サイトです。</dd>
-            <dt>工数</dt>
-            <dd>1日</dd>
-            <dt>こだわりポイント</dt>
-            <dd>可愛い</dd>
-            <dt>苦労した点とその対策</dt>
-            <dd>可愛すぎる為、ラジオを聴くことにした。</dd>
-            <dt>今後の課題</dt>
-            <dd>どうやって付き合うか</dd>
+          <dl class="works__dl">
+            <dt class="works__dt">概要</dt>
+            <dd class="works__dd">吉岡里帆さんのHPの模写サイトです。</dd>
+            <dt class="works__dt">工数</dt>
+            <dd class="works__dd">1日</dd>
+            <dt class="works__dt">こだわりポイント</dt>
+            <dd class="works__dd">可愛い</dd>
+            <dt class="works__dt">苦労した点とその対策</dt>
+            <dd class="works__dd">可愛すぎる為、ラジオを聴くことにした。</dd>
+            <dt class="works__dt">今後の課題</dt>
+            <dd class="works__dd">どうやって付き合うか</dd>
           </dl>
       </li>
     </ul>
