topボタンのアニメーション変更

--- a/index.html
+++ b/index.html
@@ -347,11 +347,16 @@
       <span id="contact" class="anchor"></span>
       CONTACT
     </h1>
-    <p>mail : shibawanko0202@gmail.com</p>
-    <a href="https://github.com/shibawanko0202">
+    <address class="contact__mail">
+      mail : 
+      <a href="mailto:shibawanko0202@gmail.com">
+        shibawanko0202@gmail.com
+      </a>
+    </address>
+    <a href="https://github.com/shibawanko0202" class="contact__icon">
       <i class="bi bi-github"></i>
     </a>
-    <a href="https://www.instagram.com/shibawanko0202/">
+    <a href="https://www.instagram.com/shibawanko0202/" class="contact__icon">
       <i class="bi bi-instagram"></i>
     </a>
   </section>
@@ -361,7 +366,7 @@
   </footer>
 
   <a  id="to_top" class="top" href="#">
-    <img src="img/TOPボタン(白).png" alt="TOPへ戻る" class="top__img">
+    <img src="img/TOPボタン(連結用).png" alt="TOPへ戻る" class="top__img">
     <img src="img/TOPボタン(ホバー).png" alt="" class="top__img top__img-hover">
   </a>
 
