worksのレイアウト調整

--- a/index.html
+++ b/index.html
@@ -205,8 +205,10 @@
           <img src="img/もんてくらい(スクショ)950.jpg" alt="" class="works__list-img">
         </a>
           <h2 class="monte">
-            住宅型有料老人ホーム<br>
-            <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="monte-img">
+            <span>
+              住宅型有料老人ホーム<br>
+              <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="monte-img">
+            </span>
           </h2>
           <dl class="works__dl">
             <dt class="works__dt">概要</dt>
@@ -240,7 +242,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/sokudokubunko/">
-          <img src="img/sokudokubunko.jpg" alt="" class="works__list-img">
+          <img src="img/強制速読文庫(950).jpg" alt="" class="works__list-img">
         </a>
           <h2 class="sokudoku">速読強要文庫</h2>
           <dl class="works__dl">
@@ -268,7 +270,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/speedTyping/">
-          <img src="img/typing!(speed).jpg" alt="" class="works__list-img">
+          <img src="img/typyng(950).jpg" alt="" class="works__list-img">
         </a>
         <div>
           <h2 class="typing">typing!</h2>
@@ -299,7 +301,11 @@
         <a href="https://shibawanko0202.github.io/monkeybord/">
           <img src="img/monkeybord.jpg" alt="" class="works__list-img">
         </a>
-          <h2 class="monkeybord">無限<span>の</span>猿定理実験場</h2>
+          <h2 class="monkeybord">
+            <span>
+              無限<span class="no">の</span>猿定理実験場
+            </span>
+          </h2>
           <dl class="works__dl">
             <dt class="works__dt">概要</dt>
             <dd class="works__dd">
@@ -323,7 +329,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
-          <img src="img/yoshiokariho_copy.jpg" alt="" class="works__list-img">
+          <img src="img/吉岡里帆(950).jpg" alt="" class="works__list-img">
         </a>
           <h2>吉岡里帆/コピーサイト</h2>
           <dl class="works__dl">
