画像の整理と圧縮

--- a/index.html
+++ b/index.html
@@ -4,44 +4,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shibata.portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/pen.png">
+  <title>シバタノポートフォリオ</title>
 
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- 基本フォント -->
-  <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
-  <!-- セクション名とフッター用フォント -->
-  <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&text=ABOUTSKILWRCN(c)20shibat&display=swap" rel="stylesheet">
-  <!-- 速読強要文庫 -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&text=速読強要文庫&display=swap" rel="stylesheet">
-  <!-- typing! -->
-  <link href="https://fonts.googleapis.com/css2?family=Monofett&text=typing!&display=swap" rel="stylesheet">
-  <!-- 無限の猿定理実験場 -->
-  <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&text=無限の猿定理実験場&display=swap" rel="stylesheet">
+  <!-- ↓↓ style ↓↓ -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.ico">
+  <!-- ↑↑ style ↑↑ -->
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVQWQCVVL0"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-RVQWQCVVL0');
-</script>
+  <!-- ↓↓ google fonts ↓↓ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- 基本フォント -->
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+    <!-- セクション名とフッター用フォント -->
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&text=ABOUTSKILWRCN(c)20shibat&display=swap" rel="stylesheet">
+    <!-- 速読強要文庫 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&text=速読強要文庫&display=swap" rel="stylesheet">
+    <!-- typing! -->
+    <link href="https://fonts.googleapis.com/css2?family=Monofett&text=typing!&display=swap" rel="stylesheet">
+    <!-- 無限の猿定理実験場 -->
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&text=無限の猿定理実験場&display=swap" rel="stylesheet">
+  <!-- ↑↑ google fonts ↑↑ -->
+
+  <!-- ↓↓ Google Analytics ↓↓ -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVQWQCVVL0"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-RVQWQCVVL0');
+    </script>
+  <!-- ↑↑ Google Analytics ↑↑ -->
 </head>
 <body>
 
   <div id="loading" class="loading">
     <div>
-      <img src="img/loading(1).png" alt="" class="loading__img">
-      <img src="img/loading(2).png" alt="" class="loading__img">
-      <img src="img/loading(3).png" alt="" class="loading__img">
-      <img src="img/loading(4).png" alt="" class="loading__img">
-      <img src="img/loading(5).png" alt="" class="loading__img show">
+      <img src="img/loading(1).webp" alt="" class="loading__img">
+      <img src="img/loading(2).webp" alt="" class="loading__img">
+      <img src="img/loading(3).webp" alt="" class="loading__img">
+      <img src="img/loading(4).webp" alt="" class="loading__img">
+      <img src="img/loading(5).webp" alt="" class="loading__img show">
     </div>
   </div>
   
@@ -53,7 +58,7 @@
   <header>
     <a href="#">
       <h1 id="header__title">
-        <img src="img/シバタノポートフォリオ(art-deco).png" alt="柴田のポートフォリオ" class="header__title-img header__title-img--scroll-hover">
+        <img src="img/シバタノポートフォリオ(art-deco).webp" alt="柴田のポートフォリオ" class="header__title-img header__title-img--scroll-hover">
       </h1>
     </a>
     <div class="header__nav">
@@ -73,29 +78,29 @@
           <ul class="hero__lists">
             <li class="hero__list">
               <a href="#about">
-                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
-                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <img src="img/フレーム.webp" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).webp" alt="" class="hero__list-frame hero__list-frame-hover">
                 <div>ABOUT</div>
               </a>
             </li>
             <li class="hero__list">
               <a href="#skill">
-                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
-                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <img src="img/フレーム.webp" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).webp" alt="" class="hero__list-frame hero__list-frame-hover">
                 <div>SKILL</div>
               </a>
             </li>
             <li class="hero__list">
               <a href="#works">
-                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
-                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <img src="img/フレーム.webp" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).webp" alt="" class="hero__list-frame hero__list-frame-hover">
                 <div>WORKS</div>
               </a>
             </li>
             <li class="hero__list">
               <a href="#contact">
-                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
-                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <img src="img/フレーム.webp" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).webp" alt="" class="hero__list-frame hero__list-frame-hover">
                 <div>CONTACT</div>
               </a>
             </li>
@@ -119,7 +124,7 @@
     <p>
       自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
       その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。<br>
-      現在はweb製作に携わりたいと考え独学で勉強、転職活動中です。<br>
+      現在はweb制作に携わりたいと考え独学で勉強、転職活動中です。<br>
     </p>
     <p>
       愛知県名古屋市在住
@@ -151,7 +156,7 @@
     </h1>
     <ul class="skill__lists">
       <li class="skill__list">
-        <img src="img/html5-css3.png" alt="HTML" class="skill__list-img">
+        <img src="img/html5-css3.webp" alt="HTML" class="skill__list-img">
         <div>
           <h2>HTML/CSS</h2>
           <p>Webサイトを0から構築する為のHTML、CSSの使用が可能です。<br>
@@ -159,7 +164,7 @@
         </div>
       </li>
       <li class="skill__list">
-        <img src="img/js@2x.png" alt="JavaScript" class="skill__list-img">
+        <img src="img/javascript.webp" alt="JavaScript" class="skill__list-img">
         <div>
           <h2>JavaScript</h2>
           <p>Webサイトに動きを付けるコーディングが可能です。<br>
@@ -167,7 +172,7 @@
         </div>
       </li>
       <li class="skill__list">
-        <img src="img/ps@2x.png" alt="Photoshop" class="skill__list-img">
+        <img src="img/photoshop.webp" alt="Photoshop" class="skill__list-img">
         <div>
           <h2>Photoshop</h2>
           <p>
@@ -177,14 +182,14 @@
         </div>
       </li>
       <li class="skill__list">
-        <img src="img/responsive.png" alt="responsivedesign" class="skill__list-img">
+        <img src="img/responsive.webp" alt="responsivedesign" class="skill__list-img">
         <div>
           <h2>Responsive</h2>
           <p>様々なデバイスからアクセスした際に、最適な表示となるようにWebサイトを制作出来ます。</p>
         </div>
       </li>
       <li class="skill__list">
-        <img src="img/photo-movie.png" alt="camera" class="skill__list-img">
+        <img src="img/photo-movie.webp" alt="camera" class="skill__list-img">
         <div>
           <h2>Photo/Movie</h2>
           <p>写真撮影を趣味としている為、簡単なレタッチが可能です。<br>
@@ -199,25 +204,28 @@
       <span id="works" class="anchor"></span>
       WORKS
     </h1>
-    <ul>
+    <ul class="works__lists">
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/monte/">
-          <img src="img/もんてくらい(スクショ)950.jpg" alt="" class="works__list-img">
+          <img src="img/もんてくらい.webp" alt="" class="works__list-img">
         </a>
           <h2 class="monte">
             <span>
               住宅型有料老人ホーム<br>
-              <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="monte-img">
+              <img src="img/もんてくらい(ロゴタイプ)(圧縮済).webp" alt="もんてくらい" class="works__monte-logo">
             </span>
           </h2>
           <dl class="works__dl">
             <dt class="works__dt">概要</dt>
-            <dd class="works__dd">知人が経営する老人ホームのwebサイトです。</dd>
+            <dd class="works__dd">
+              知人が経営する老人ホームのwebサイトです。<br>
+              デプロイは準備が出来しだい先方がするとの事なので、現状は報告用のgithubページです。
+            </dd>
             <dt class="works__dt">工数</dt>
             <dd class="works__dd">25日</dd>
             <dt class="works__dt">担当範囲</dt>
             <dd class="works__dd">
-              <ul>
+              <ul class="works__monte-lists">
                 <li>サイトデザイン</li>
                 <li>使用写真の選定</li>
                 <li>画像の加工</li>
@@ -242,7 +250,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/sokudokubunko/">
-          <img src="img/強制速読文庫(950).jpg" alt="" class="works__list-img">
+          <img src="img/強制速読文庫.webp" alt="" class="works__list-img">
         </a>
           <h2 class="sokudoku">速読強要文庫</h2>
           <dl class="works__dl">
@@ -270,7 +278,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/speedTyping/">
-          <img src="img/typyng(950).jpg" alt="" class="works__list-img">
+          <img src="img/typyng.webp" alt="" class="works__list-img">
         </a>
         <div>
           <h2 class="typing">typing!</h2>
@@ -299,7 +307,7 @@
       </li>
       <li class="works__list">
         <a href="https://shibawanko0202.github.io/monkeybord/">
-          <img src="img/monkeybord.jpg" alt="" class="works__list-img">
+          <img src="img/monkeybord.webp" alt="" class="works__list-img">
         </a>
           <h2 class="monkeybord">
             <span>
@@ -310,39 +318,50 @@
             <dt class="works__dt">概要</dt>
             <dd class="works__dd">
               「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。<br>
-              数文字の英単語でも滅茶苦茶時間がかかることが分かります。<br>
+              数文字の英単語でも滅茶苦茶時間がかかることが分かりますが。<br>
               「apple」は(幸運にも)6時間程度で完成しました。
             </dd>
             <dt class="works__dt">工数</dt>
             <dd class="works__dd">10日</dd>
             <dt class="works__dt">こだわりポイント</dt>
             <dd class="works__dd">
-              機能としてはシンプルなものなので、今回はメディアクエリを使わないでレスポンシブ対応してみました。
+              機能としてはシンプルなものなので、今回は配色やヘッダーの文字組み等にこだわってみました。
             </dd>
             <dt class="works__dt">苦労した点とその対策</dt>
             <dd class="works__dd">
               打鍵した文字を保持し続けると2万字程度からsetIntervalの速度が落ちる為必要以上に時間がかかるので、現在は一定数を越えると文字を破棄して速度を維持しています。
             </dd>
             <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留。</dd>
+            <dd class="works__dd">
+              日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留。
+            </dd>
           </dl>
       </li>
       <li class="works__list">
-        <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
-          <img src="img/吉岡里帆(950).jpg" alt="" class="works__list-img">
-        </a>
-          <h2>吉岡里帆/コピーサイト</h2>
+        <img src="img/シバタノポートフォリオ.webp" alt="" class="works__list-img">
+          <h2>
+            <img src="img/シバタノポートフォリオ(飾り罫).png" alt="シバタノポートフォリオ" class="works__shibata-logo">
+          </h2>
           <dl class="works__dl">
             <dt class="works__dt">概要</dt>
-            <dd class="works__dd">吉岡里帆さんのHPの模写サイトです。</dd>
+            <dd class="works__dd">このポートフォリオサイトです。</dd>
             <dt class="works__dt">工数</dt>
-            <dd class="works__dd">1日</dd>
+            <dd class="works__dd">不明</dd>
             <dt class="works__dt">こだわりポイント</dt>
-            <dd class="works__dd">可愛い</dd>
+            <dd class="works__dd">
+              デザインの基本は引き算だと思っているので、今回は逆にゴチャゴチャデザインの王道(？)アールデコっぽいヘッダーのデザインに挑戦しました。<br>
+              ウインドウ比が決まっていないwebデザインと画面にとにかく図形を詰め込むアールデコは相性が悪いですが、ヘッダーのシルエットを斜めにすることでどのウインドウサイズでも破綻しないように務めました。
+            </dd>
             <dt class="works__dt">苦労した点とその対策</dt>
-            <dd class="works__dd">可愛すぎる為、ラジオを聴くことにした。</dd>
+            <dd class="works__dd">
+              ヘッダーデザインに非常に手こずりました。<br>
+              アールデコに触れたのが初めてで、引き算・余白的思考では到達しないデザインなのでなかなかアイデアが出ず。<br>
+              pinterestでデザインを漁りまくって、加工可能なイラストサイトから使えそうな図形を探し、いままで苦手だったベジェ曲線とついに向き合いなんとか完成しました。
+            </dd>
             <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">どうやって付き合うか</dd>
+            <dd class="works__dd">
+              まだ一部のデザインがアールデコなだけなので、サイト全体をそうしたいと思っています。いずれ。
+            </dd>
           </dl>
       </li>
     </ul>
@@ -372,8 +391,8 @@
   </footer>
 
   <a  id="to_top" class="top" href="#">
-    <img src="img/TOPボタン(連結用).png" alt="TOPへ戻る" class="top__img">
-    <img src="img/TOPボタン(ホバー).png" alt="" class="top__img top__img-hover">
+    <img src="img/TOPボタン.webp" alt="TOPへ戻る" class="top__img">
+    <img src="img/TOPボタン(ホバー).webp" alt="" class="top__img top__img-hover">
   </a>
 
   <script src="js/main.js"></script>
