--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og: https://ogp.me/ns#">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="柴田の事がなんとなく分かるポートフォリオサイトです。">
+  <meta name="keywords" content="柴田,ポートフォリオ,webサイト">
+  <meta name="title" content="シバタノポートフォリオ">
   <title>シバタノポートフォリオ</title>
+
+  <!-- ↓↓ OGP ↓↓ -->
+    <meta property="og:url" content="https://shibawanko0202.github.io/shibawanko0202/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="シバタノポートフォリオ" />
+    <meta property="og:description" content="柴田の事がなんとなく分かるポートフォリオサイトです。" />
+    <meta property="og:site_name" content="シバタノポートフォリオ" />
+    <meta property="og:image" content="https://shibawanko0202.github.io/shibawanko0202/img/シバタノポートフォリオ.webp" />
+  <!-- ↑↑ OGP ↑↑ -->
 
   <!-- ↓↓ style ↓↓ -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -130,7 +142,7 @@
       愛知県名古屋市在住
     </p>
     <p>
-      趣味 : 読書/映画観賞/カメラ
+      趣味 : 読書/映画観賞/カメラ/モノづくり
     </p>
     <details>
       <summary>なぜ、今さら転職したいのですか</summary>
@@ -238,9 +250,9 @@
             <dd class="works__dd">
               サイトを閲覧する年齢層(老人ホームの利用者層とその家族)を考え、できるだけ分かりやすくスクロールだけで完結するデザインにしました。
             </dd>
-            <dt class="works__dt">苦労した点とその対策</dt>
+            <dt class="works__dt">苦労した点</dt>
             <dd class="works__dd">
-              「使用する画像が決まっておらず、良い写真が撮れたら変更したい」という事だったので、現状持っている画像(200枚以上)を送ってもらいそこから使用する画像を選定し、レタッチ(露出の調整、歪曲収差の補正、不要なものの削除等)してから使用しています。
+              「使用する画像が決まっておらず、良い写真が撮れたら変更したい」という事だったので、現状持っている画像(200枚以上)を送ってもらいそこから使用する画像を選定し、レタッチ(露出の調整、歪曲収差の補正、不要なものの削除等)してから使用した為、とても時間がかかりました。
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
@@ -262,10 +274,10 @@
             <dd class="works__dd">10日</dd>
             <dt class="works__dt">こだわりポイント</dt>
             <dd class="works__dd">
-              文庫本(古本)のような見た目とアニメーション。<br>
-              難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。
+              文庫本(古本)のような見た目とアニメーションにこだわりました。<br>
+              また、難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。
             </dd>
-            <dt class="works__dt">苦労した点とその対策</dt>
+            <dt class="works__dt">苦労した点</dt>
             <dd class="works__dd">
               青空文庫(著作権の消滅した文学作品を載せているwebサイト)から作品を選ぶのに悩みました。<br>
               本当は冒頭が有名な「雪国」も掲載したかったのですが、著者が比較的長寿だった為ギリギリ著作権が残っていました。
@@ -295,13 +307,17 @@
               気持のいいUIを目指してアニメーションを実装しました。<br>
               ミスした際に現れるバルーンはクリックで割ることもできます。
             </dd>
-            <dt class="works__dt">苦労した点とその対策</dt>
+            <dt class="works__dt">苦労した点</dt>
             <dd class="works__dd">
               ミスしたキーのバルーンの出現がランダムな為、問題文に被って出現する事もありました。<br>
-              その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに出現するようにしました。
+              その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに位置を指定する方法をとっています。
             </dd>
             <dt class="works__dt">今後の課題</dt>
-            <dd class="works__dd">問題(単語)の追加。日本語ver。</dd>
+            <dd class="works__dd">
+              問題(単語)の追加。日本語ver。<br>
+              ランキング(月間)の追加。<br>
+              苦手なキーの入った単語の出現率増加。
+            </dd>
           </dl>
         </div>
       </li>
@@ -327,7 +343,7 @@
             <dd class="works__dd">
               機能としてはシンプルなものなので、今回は配色やヘッダーの文字組み等にこだわってみました。
             </dd>
-            <dt class="works__dt">苦労した点とその対策</dt>
+            <dt class="works__dt">苦労した点</dt>
             <dd class="works__dd">
               打鍵した文字を保持し続けると2万字程度からsetIntervalの速度が落ちる為必要以上に時間がかかるので、現在は一定数を越えると文字を破棄して速度を維持しています。
             </dd>
@@ -352,7 +368,7 @@
               デザインの基本は引き算だと思っているので、今回は逆にゴチャゴチャデザインの王道(？)アールデコっぽいヘッダーのデザインに挑戦しました。<br>
               ウインドウ比が決まっていないwebデザインと画面にとにかく図形を詰め込むアールデコは相性が悪いですが、ヘッダーのシルエットを斜めにすることでどのウインドウサイズでも破綻しないように務めました。
             </dd>
-            <dt class="works__dt">苦労した点とその対策</dt>
+            <dt class="works__dt">苦労した点</dt>
             <dd class="works__dd">
               ヘッダーデザインに非常に手こずりました。<br>
               アールデコに触れたのが初めてで、引き算・余白的思考では到達しないデザインなのでなかなかアイデアが出ず。<br>
