--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="シバタノポートフォリオ" />
     <meta property="og:description" content="柴田の事がなんとなく分かるポートフォリオサイトです。" />
     <meta property="og:site_name" content="シバタノポートフォリオ" />
-    <meta property="og:image" content="https://shibawanko0202.github.io/shibawanko0202/img/シバタノポートフォリオ.webp" />
+    <meta property="og:image" content="https://shibawanko0202.github.io/shibawanko0202/img/OGP.jpg" />
   <!-- ↑↑ OGP ↑↑ -->
 
   <!-- ↓↓ style ↓↓ -->
@@ -168,7 +168,7 @@
     </h1>
     <ul class="skill__lists">
       <li class="skill__list">
-        <img src="img/html5-css3.webp" alt="HTML" class="skill__list-img">
+        <img src="img/htmlLS-css3.webp" alt="HTML/CSS" class="skill__list-img">
         <div>
           <h2>HTML/CSS</h2>
           <p>Webサイトを0から構築する為のHTML、CSSの使用が可能です。<br>
@@ -372,11 +372,11 @@
             <dd class="works__dd">
               ヘッダーデザインに非常に手こずりました。<br>
               アールデコに触れたのが初めてで、引き算・余白的思考では到達しないデザインなのでなかなかアイデアが出ず。<br>
-              pinterestでデザインを漁りまくって、加工可能なイラストサイトから使えそうな図形を探し、いままで苦手だったベジェ曲線とついに向き合いなんとか完成しました。
+              pinterestでデザインを漁りまくって、加工OKなイラストサイトから使えそうな図形を探し、いままで苦手だったベジェ曲線とついに向き合いなんとか完成しました。
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
-              まだ一部のデザインがアールデコなだけなので、サイト全体をそうしたいと思っています。いずれ。
+              まだ一部のデザインがアールデコなだけなので、いずれはサイト全体をアールデコ的デザインで満たしたいと思っています。
             </dd>
           </dl>
       </li>
