aboutの文章追加

--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
     <p>
       長崎県五島列島出身
     </p>
-    <p>
       自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
-      その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。<br>
+      その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。
+    <p>
+      一方で現職ではモノづくりが好きな気持ちが満たされない事に長い間モヤモヤを感じていましたが、転職にマイナスな先入観を持っていたため行動できずにいました。
+    </p>
+    <p>
+      しかし自身の年齢やコロナによる情勢の変化でプライベートでの活動が減ったことで転職への気持が強まり、遅まきながら転職活動を始めました。<br>
       現在はweb制作に携わりたいと考え独学で勉強、転職活動中です。<br>
     </p>
     <p>
@@ -147,16 +151,29 @@
     <details>
       <summary>なぜ、今さら転職したいのですか</summary>
       <div class="answer">
-        <p>1.現職での成長に限界を感じた<br>
+        <p>
+          1.現職での成長に限界を感じた<br>
           2.モノづくりに関わりたいと考えた<br>
           3.プライベートの活動に一区切りがついた<br>
-        などの複合的な理由です。</p>
+          などの複合的な理由です。
+        </p>
       </div>
     </details>
     <details>
       <summary>web制作を志望する理由は何ですか</summary>
       <div class="answer">
-        <p>モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。</p>
+        <p>
+          モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。
+        </p>
+      </div>
+    </details>
+    <details>
+      <summary>趣味のモノづくりとは具体的に何ですか</summary>
+      <div class="answer">
+        <p>
+          本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨やロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
+          また、photoshopでの画像加工や動画編集などの経験もあります。
+        </p>
       </div>
     </details>
   </section>
