--- a/index.html
+++ b/index.html
@@ -133,12 +133,14 @@
     <p>
       長崎県五島列島出身
     </p>
+    <p class="about__p-long">
       自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
       その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。
-    <p>
+    </p>
+    <p class="about__p-long">
       一方で現職ではモノづくりが好きな気持ちが満たされない事に長い間モヤモヤを感じていましたが、転職にマイナスな先入観を持っていたため行動できずにいました。
     </p>
-    <p>
+    <p class="about__p-long">
       しかし自身の年齢やコロナによる情勢の変化でプライベートでの活動が減ったことで転職への気持が強まり、遅まきながら転職活動を始めました。<br>
       現在はweb制作に携わりたいと考え独学で勉強、転職活動中です。<br>
     </p>
