faqのアニメーション変更

--- a/index.html
+++ b/index.html
@@ -150,34 +150,54 @@
     <p>
       趣味 : 読書/映画観賞/カメラ/モノづくり
     </p>
-    <details>
-      <summary>なぜ、今さら転職したいのですか</summary>
-      <div class="answer">
-        <p>
-          1.現職での成長に限界を感じた<br>
-          2.モノづくりに関わりたいと考えた<br>
-          3.プライベートの活動に一区切りがついた<br>
-          などの複合的な理由です。
-        </p>
+    <dl>
+      <div class="about__faq-list">
+        <dt class="about__faq-dt">
+          なぜ今さら転職したいのですか
+          <div class="about__faq-wrapper">
+            <div class="about__faq-plus"></div>
+            <div class="about__faq-minus"></div>
+          </div>
+        </dt>
+        <dd class="about__faq-dd">
+          <div class="about__faq-dd-inner">
+            1.現職での成長に限界を感じた<br>
+            2.モノづくりに関わりたいと考えた<br>
+            3.プライベートの活動に一区切りがついた<br>
+            などの複合的な理由です。
+          </div>
+        </dd>
       </div>
-    </details>
-    <details>
-      <summary>web制作を志望する理由は何ですか</summary>
-      <div class="answer">
-        <p>
-          モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。
-        </p>
+      <div class="about__faq-list">
+        <dt class="about__faq-dt">
+          web制作を志望する理由は何ですか
+          <div class="about__faq-wrapper">
+            <div class="about__faq-plus"></div>
+            <div class="about__faq-minus"></div>
+          </div>
+        </dt>
+        <dd class="about__faq-dd">
+          <div class="about__faq-dd-inner">
+            モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。
+          </div>
+        </dd>
       </div>
-    </details>
-    <details>
-      <summary>趣味のモノづくりとは具体的に何ですか</summary>
-      <div class="answer">
-        <p>
-          本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨やロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
-          また、photoshopでの画像加工や動画編集などの経験もあります。
-        </p>
+      <div class="about__faq-list">
+        <dt class="about__faq-dt">
+          趣味のモノづくりとは具体的に何ですか
+          <div class="about__faq-wrapper">
+            <div class="about__faq-plus"></div>
+            <div class="about__faq-minus"></div>
+          </div>
+        </dt>
+        <dd class="about__faq-dd">
+          <div class="about__faq-dd-inner">
+            本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨やロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
+            また、photoshopでの画像加工や動画編集などの経験もあります。
+          </div>
+        </dd>
       </div>
-    </details>
+    </dl>
   </section>
 
   <section class="skill">
