aboutの余白の調整

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <p>
       趣味 : 読書/映画観賞/カメラ/モノづくり
     </p>
-    <dl>
+    <dl class="about__faq-lists">
       <div class="about__faq-list">
         <dt class="about__faq-dt">
           なぜ今さら転職したいのですか
