文章の修正

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </dt>
         <dd class="about__faq-dd">
           <div class="about__faq-dd-inner">
-            本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨やロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
+            本棚やテーブル、スピーカーなどの一般的な木工作業から、趣味の一つであるロードバイクの金属部品の切削研磨、メッキやロウ付け、友人や姉の結婚祝いで石粉粘土での立体造形などをしました。<br>
             また、photoshopでの画像加工や動画編集などの経験もあります。
           </div>
         </dd>
@@ -323,7 +323,8 @@
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
-              現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用して自動変換出来るようにしたいと考えています。
+              現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用しての自動変換。<br>
+              文字送り速度の変更コントローラーの追加。
             </dd>
           </dl>
       </li>
