worksの文章の校正

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
-              いずれはブログやお知らせも追加したいとのことなので、CMSの導入。
+              いずれはブログやお知らせも追加したいとのことなので、CMSの導入を考えています。
             </dd>
           </dl>
       </li>
@@ -323,8 +323,7 @@
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
-              現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用しての自動変換。<br>
-              文字送り速度の変更コントローラーの追加。
+              現在は手入力で文章を配列に変換しており非常に手間がかかる為、形態素解析ソフト(kuromoji.jsなど)を使用しての自動変換と、文字送り速度の変更コントローラーを追加したいと考えています。
             </dd>
           </dl>
       </li>
@@ -355,8 +354,9 @@
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
               問題(単語)の追加。日本語ver。<br>
-              ランキング(月間)の追加。<br>
-              苦手なキーの入った単語の出現率増加。
+              ランキングの追加。<br>
+              苦手なキーの入った単語の出現率増加。<br>
+              などを考えています。
             </dd>
           </dl>
         </div>
@@ -389,7 +389,7 @@
             </dd>
             <dt class="works__dt">今後の課題</dt>
             <dd class="works__dd">
-              日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留。
+              日本語への対応をしたいですが、実装しても現実的でない程打鍵に時間がかかるので保留・・・。
             </dd>
           </dl>
       </li>
